[gd_scene load_steps=5 format=2]

[ext_resource path="res://ENGINE/Scenes/Battle/Input/Character/CharacterInput.gd" type="Script" id=1]
[ext_resource path="res://ENGINE/Scenes/Battle/Input/Character/InputReader.gd" type="Script" id=2]
[ext_resource path="res://ENGINE/Scenes/Battle/Input/Character/ArrayReader.gd" type="Script" id=3]
[ext_resource path="res://ENGINE/Scenes/Battle/Input/Character/CommandReader.gd" type="Script" id=4]

[node name="CharacterInput" type="Node2D"]
script = ExtResource( 1 )

[node name="InputReader" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="ArrayReader" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="CommandReader" type="Node2D" parent="."]
script = ExtResource( 4 )
